unpackaged/main/default/objects/X36_Points_Health_Check__c/X36_Points_Health_Check__c.object-meta.xml
<CustomObject>
    <label>36 Points Health Check</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>Health Check</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>36 Points Health Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>