unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/AII_Seat_Belts_Operation__c.field-meta.xml
<CustomField>
    <fullName>AII_Seat_Belts_Operation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AII Seat Belts Operation</label>
    <length>225</length>
    <type>Text</type>
</CustomField>