unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Air_Conditioner_Filter__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioner_Filter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Air Conditioner Filter</label>
    <length>225</length>
    <type>Text</type>
</CustomField>