unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Air_filter__c.field-meta.xml
<CustomField>
    <fullName>Air_filter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Air filter</label>
    <length>225</length>
    <type>Text</type>
</CustomField>