unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Airbag_SRS_System__c.field-meta.xml
<CustomField>
    <fullName>Airbag_SRS_System__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Airbag (SRS) System</label>
    <length>225</length>
    <type>Text</type>
</CustomField>