unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/All_Doors_Hinges_Locks__c.field-meta.xml
<CustomField>
    <fullName>All_Doors_Hinges_Locks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>All Doors Hinges, Locks</label>
    <length>225</length>
    <type>Text</type>
</CustomField>