unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/All_Tyre_Condition_Pressure__c.field-meta.xml
<CustomField>
    <fullName>All_Tyre_Condition_Pressure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>All Tyre Condition &amp; Pressure</label>
    <length>225</length>
    <type>Text</type>
</CustomField>