unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Ball_Joints_Dust_Cover__c.field-meta.xml
<CustomField>
    <fullName>Ball_Joints_Dust_Cover__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ball Joints &amp; Dust Cover</label>
    <length>225</length>
    <type>Text</type>
</CustomField>