unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Battery_Connections__c.field-meta.xml
<CustomField>
    <fullName>Battery_Connections__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Battery &amp; Connections</label>
    <length>225</length>
    <type>Text</type>
</CustomField>