unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Body_Check_Dents_Corrosion__c.field-meta.xml
<CustomField>
    <fullName>Body_Check_Dents_Corrosion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Body Check (Dents &amp; Corrosion</label>
    <length>225</length>
    <type>Text</type>
</CustomField>