unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Brake_Fluid__c.field-meta.xml
<CustomField>
    <fullName>Brake_Fluid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brake Fluid</label>
    <length>225</length>
    <type>Text</type>
</CustomField>