unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Brake_Pads_Discs_Shoes__c.field-meta.xml
<CustomField>
    <fullName>Brake_Pads_Discs_Shoes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brake Pads, Discs &amp; Shoes</label>
    <length>225</length>
    <type>Text</type>
</CustomField>