unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/coolant_LLC__c.field-meta.xml
<CustomField>
    <fullName>coolant_LLC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>coolant (LLC)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>