unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Coolant_SLLC__c.field-meta.xml
<CustomField>
    <fullName>Coolant_SLLC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coolant (SLLC)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>