unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Differential_Oil__c.field-meta.xml
<CustomField>
    <fullName>Differential_Oil__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Differential Oil</label>
    <length>225</length>
    <type>Text</type>
</CustomField>