unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Fr_Rr_Susp_Bushes_Shock_Absorber__c.field-meta.xml
<CustomField>
    <fullName>Fr_Rr_Susp_Bushes_Shock_Absorber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fr.&amp;Rr.Susp.Bushes&amp;Shock Absorber</label>
    <length>225</length>
    <type>Text</type>
</CustomField>