unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Leaks_Oil_and_Fluids__c.field-meta.xml
<CustomField>
    <fullName>Leaks_Oil_and_Fluids__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Leaks Oil and Fluids</label>
    <length>225</length>
    <type>Text</type>
</CustomField>