unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>36 Points Health Checks</relationshipLabel>
    <relationshipName>X36_Points_Health_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>