unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Propeller_Shaft__c.field-meta.xml
<CustomField>
    <fullName>Propeller_Shaft__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Propeller Shaft</label>
    <length>225</length>
    <type>Text</type>
</CustomField>