unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Steering_Knuckle_Grease_If_fitted__c.field-meta.xml
<CustomField>
    <fullName>Steering_Knuckle_Grease_If_fitted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Steering Knuckle Grease (If fitted)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>