unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Steering_Wear_Leaks__c.field-meta.xml
<CustomField>
    <fullName>Steering_Wear_Leaks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Steering Wear &amp; Leaks</label>
    <length>225</length>
    <type>Text</type>
</CustomField>