unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/Tranfer_Box_Oil__c.field-meta.xml
<CustomField>
    <fullName>Tranfer_Box_Oil__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tranfer Box Oil</label>
    <length>225</length>
    <type>Text</type>
</CustomField>