unpackaged/main/default/objects/X36_Points_Health_Check__c/fields/windshield_Fluid__c.field-meta.xml
<CustomField>
    <fullName>windshield_Fluid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Windshield Fluid</label>
    <length>225</length>
    <type>Text</type>
</CustomField>